--- a/src/components/shop/ProductCard.module.scss
+++ b/src/components/shop/ProductCard.module.scss
@@ -94,9 +94,9 @@
 }
 
 .productPrice {
-  font-size: 18px;
+  font-size: 19px;
   font-weight: 700;
-  color: #1a1a1a;
+  color: #2B463C;
   margin-bottom: $spacing-md;
   position: relative;
   display: block;
